fix types, improve attribution of demo video 	modified:   HOW_S/loudness.html

--- a/HOW_S/loudness.html
+++ b/HOW_S/loudness.html
@@ -140,7 +140,7 @@ listening.  LUFS are an important measurement in mixing, but we need to remember
 LUFS do not measure absolute loudness like phons do.  <i>A playback volume control or 
 any other typical level control changes phons, but not LUFS.</i>  (Changing the recorded 
 or streamed mix&mdash;making one or another part of the mix softer or louder&mdash;can change 
-the LUFS.<br><br>
+the LUFS.)<br><br>
 
 <i>Sone</i><br>
 A related but non-logarithmic measure of loudness that one might occasionally encounter 
@@ -182,8 +182,9 @@ But the demonstration is well designed, vivid, and correct.)<br><br>
 
 <img width = "500" src="https://dfdeboer.github.io/HOW_S/LUFS_vs_dBVU.jpg"><br>
 <i>Tom Scott explains that the whispered voice has the highest dB-VU measurement suggesting 
-that it will be perceived as louder than the shouted voice when in fact it is perceived as softer. <small>(Screenshot from his 
-<a href="https://www.youtube.com/watch?v=Is_wu0VRIqQ">video</a>.)</small></i><br><br>
+that it will be perceived as louder than the shouted voice when in fact it is perceived as softer. 
+<small>(Screenshot from his <a href="https://www.youtube.com/watch?v=Is_wu0VRIqQ">video</a> at about 
+6:37.  [slightly edited, "dB" changed to "db-VU" here])</small></i><br><br>
 
 The units discussed in this section (LUFS and dB-VU) are popular, but they are not true 
 measurements of the absolute loudness of a <i>sound</i>.  They are characteristics of a signal 
