Added illustrations of loudness compensation switches 	new file:   "HOW_S/Mackie SRM450 Powered Speaker \342\200\223 SoundandVideoRentals.com.url" 	new file:   HOW_S/MackieWithContour.png 	new file:   HOW_S/Stereo Vintage Audio - Free photo on Pixabay - Pixabay.url 	modified:   HOW_S/loudness.html 	new file:   HOW_S/stereo-883186_1280.jpg 	new file:   HOW_S/stereo-883186_1280_annotated.png

--- a/HOW_S/loudness.html
+++ b/HOW_S/loudness.html
@@ -325,17 +325,47 @@ the radio are also adjusted.  Turning the volume up increases our relative perce
 bass and treble relative to the midrange frequencies.  The sound seems more full and 
 pleasing to most people when the volume is turned up.  Conversely, turning the volume down 
 decreases our ability to perceive the bass and treble sounds relative to the midrange 
-sounds and the sound seems thin and low-quality.  Some radios and consumer-grade 
-audio equipment include special tone-control circuits that automatically adjust themselves 
-as the volume control is adjusted to compensate for this nature of human hearing.  Sometimes  
-the "volume" control is then labeled as a "loudness" control instead to inform the 
-user that a loudness compensation circuit is included.  Loudness compensation is 
-usually included only on the more expensive consumer-grade audio equipment.  <br><br>
+sounds and the sound seems thin and low-quality.  <br><br>
 
-Loudness compensation is almost never included in professional equipment intended for 
-live-sound reinforcement.  It would be inappropriate to include it in that context since 
-live-sound is the reference against which loudness compensation is supposed to adjust 
-itself.<br><br>
+Some radios and consumer-grade audio equipment include special tone-control circuits 
+that automatically adjust themselves as the volume control is adjusted to compensate 
+for this nature of human hearing.  Sometimes the "volume" control is then labeled as 
+a "loudness" control instead to inform the user that a loudness compensation circuit 
+is included.  Loudness compensation is usually included only on the more expensive 
+consumer-grade audio equipment and in some powered speaker systems (professional or 
+consumer grade) that might be used in bar or restaurant type contexts to play recorded 
+music.  Usually if loudness compensation is available it can be switched on or off.  
+The switch is usually labeled something like "loudness" or "contour."  <br><br>
+
+<img width-"640" height="362" 
+src="file:///C:/Users/doug_iowa/OneDriveNot/dfdeboer.github.io/HOW_S/stereo-883186_1280_annotated.png"><br>
+<i>This Stereo system has loudness compensation.  If the "LOUDNESS" button is pressed 
+(turned on), then when the volume control is adjusted the bass and treble levels change 
+automatically to compensate for your ear's change of frequency sensitivity.  The bass 
+and treble controls act in addition to this.  The loudness compensation is all electronic.
+The bass and treble controls remain stationary as the volume control is turned, but the 
+amounts of bass and treble are changed by the compensation circuitry. <small>(<a href=
+"https://pixabay.com/photos/stereo-vintage-audio-music-sound-883186/">Pixabay</a>)</small></i><br><br> 
+
+<img width-"640" height="377" 
+src="file:///C:/Users/doug_iowa/OneDriveNot/dfdeboer.github.io/HOW_S/MackieWithContour.png"><br>
+<i>Front view and rear-panel view of a Mackie powered speaker that has a loudness compensation
+circuit.  If the "CONTOUR" button is pressed (turned on), then the bass and treble 
+levels are boosted to compensate for your ear's change of frequency sensitivity When
+the volume is low.  Mackie recommends this be used for playing recorded music at low 
+levels.<small> (<a href=
+"https://www.soundandvideorentals.com/equipment/mackie-srm450-2/">Fair use</a>)</small></i><br><br> 
+
+
+If loudness compensation is available, it 
+is not appropriate to use it in a a live-sound context since live-sound is the reference 
+against which loudness compensation is supposed to adjust itself.  Use it only to 
+play back recorded music.  (Usually it is more appropriate to use equalization in 
+the channel on the mixer than a loudness contour on a powered speaker anyway.)  
+Since loudness compensation is almost never used in professional equipment intended for 
+live-sound reinforcement (with an exception for some powered loudspeakers that 
+could be used for playing recorded music), the circuit is almost never included 
+in the first place.  <br><br>
 
 Suppose you attend a live worship service in which the musical portions of the worship 
 service are at about 80 phons of loudness.  Now you go home and listen to a recorded 
