Fixed broken links to photos

--- a/HOW_S/loudness.html
+++ b/HOW_S/loudness.html
@@ -338,7 +338,7 @@ music.  Usually if loudness compensation is available it can be switched on or o
 The switch is usually labeled something like "loudness" or "contour."  <br><br>
 
 <img width-"640" height="362" 
-src="file:///C:/Users/doug_iowa/OneDriveNot/dfdeboer.github.io/HOW_S/stereo-883186_1280_annotated.png"><br>
+src="stereo-883186_1280_annotated.png"><br>
 <i>This Stereo system has loudness compensation.  If the "LOUDNESS" button is pressed 
 (turned on), then when the volume control is adjusted the bass and treble levels change 
 automatically to compensate for your ear's change of frequency sensitivity.  The bass 
@@ -348,7 +348,7 @@ amounts of bass and treble are changed by the compensation circuitry. <small>(<a
 "https://pixabay.com/photos/stereo-vintage-audio-music-sound-883186/">Pixabay</a>)</small></i><br><br> 
 
 <img width-"640" height="377" 
-src="file:///C:/Users/doug_iowa/OneDriveNot/dfdeboer.github.io/HOW_S/MackieWithContour.png"><br>
+src="MackieWithContour.png"><br>
 <i>Front view and rear-panel view of a Mackie powered speaker that has a loudness compensation
 circuit.  If the "CONTOUR" button is pressed (turned on), then the bass and treble 
 levels are boosted to compensate for your ear's change of frequency sensitivity When
