Added sectionn on loudness safety 	modified:   HOW_S/loudness.html

--- a/HOW_S/loudness.html
+++ b/HOW_S/loudness.html
@@ -502,6 +502,35 @@ instrument on the refrain or chorus.  If you do this in a coordinated and subtle
 level, you will avoid increasing the listener fatigue factor and the whole mix will 
 sound louder and better.</p><br> 
 
+<h1>Safety Matters Related to Loudness</h1><p>
+There are many standards relating to loudness that apply in various contexts.  Churches, 
+generally speaking, are exempt from these legal regulations.  Nevertheless, churches have an 
+ethical responsibility to keep loudness levels down to safe levels.  The best complete 
+overview of this issue that this author is aware of is from the World Health Organization.  
+It is the <a href="https://iris.who.int/bitstream/handle/10665/352277/9789240043114-eng.pdf"
+>WHO global standard for safe listening venues and events</a>.  The Standard comprises 
+<i>six features</i> which, when implemented, "allow audience members around the world to enjoy 
+amplified music with protection of their hearing, while also preserving the integrity 
+of the artistic experience."  Briefly, the six features are. . . <br><br>
+
+1.)  Establish an upper limit for the sound level.<br>
+2.)  Continuously monitor the sound level using appropriate measuring equipment.<br>
+3.)  Understand (and if necessary, minimize) the variations of loudness in the venue.<br> 
+4.)  Provide personal protective equipment when and where needed (e.g. for musicians.)<br>
+5.)  Provide quiet zones for persons with compromised hearing (e.g. colds, illnesses)<br>
+6.)  Provide appropriate training for various personnel.<br><br>
+
+Interestingly, this document also recommends flying subwoofers to keep sound pressure 
+levels from the subwoofer more uniform across the venue (See Annex 9 in the document).  
+Subwoofers are heavy and flying them is usually an expensive proposition.  Thus they 
+are usually placed on the floor at the front, exposing the front row seating area to 
+higher low-frequency sound levels than the rear seating areas.  The author of this 
+House-of-Worship guide agrees with the WHO document both on the matter of safety and 
+also, it just sounds better when the subwoofer(s) is (are) flown.  ("Flying" a speaker 
+means hanging it up high near or against the ceiling.)  <br><br>
+
+
+
 
 <h1>Use your ears to judge loudness</h1><p>
 
