Added marge's Zoom bookmarks and a few edits to HoW Sound 	new file:   HOW_S/MICS/AcousticHornMic35147.png 	modified:   HOW_S/MICS/mic_types.html 	modified:   bookmarks.html 	new file:   bookmarksObs.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -248,7 +248,10 @@ large conical horns connected to metal pipes to route the acoustic energy to a
 diaphragm mounted on a lathe to cut a recording directly with the acoustic energy 
 collected.  It was anything but convenient to use one of these microphones. <br><p align="center">
 
-<a target="blank_" href="http://journal.sciencemuseum.ac.uk/media/1900/figure-3e.png"><img src="VictorSalonOrchestra_thumbnail.jpg"></a>&nbsp; &nbsp; &nbsp; 
+<a target="blank_" href="AcousticHornMic35147.png"><img src="VictorSalonOrchestra_thumbnail.jpg"></a>
+<!--first found at href="http://journal.sciencemuseum.ac.uk/media/1900/figure-3e.png"-->
+<!--original possibly at "https://blogs.loc.gov/now-see-hear/2014/10/a-look-inside-the-national-jukebox/"-->
+<!--or at "https://www.loc.gov/collections/national-jukebox/articles-and-essays/acoustical-recording/"-->&nbsp; &nbsp; &nbsp; 
 <a target="blank_" href="http://home.mit.bme.hu/~bako/zaozeng/image3.gif"><img src="Furcsa_thumbnail.jpg"></a><br>
 <i>Above:  Two examples of early acoustic-powered microphones,<br> 
 circa 1925. (click an image for a larger view)</i></p><p>
