Update CV and mic types pages 	modified:   CV.HTM 	modified:   HOW_S/MICS/mic_types.html

--- a/CV.HTM
+++ b/CV.HTM
@@ -720,12 +720,13 @@
 		and with her husband <a href=
         "https://www.facebook.com/friendsflowerfarm" target=
         "_blank">sells flowers on the weekends</a> at the Ames 
-        farmer's market.  Naomi is also a member of <a href=
+        farmer's market.  Naomi was also a member of <a href=
         "https://web.archive.org/web/20201026212001/http:/civa-artists.ning.com/profile/NaomiFriend"
         target="_blank">Christians in the Visual Arts</a>
         <!--<a href=
         "http://civa-artists.ning.com/profile/NaomiFriend"
-        target="_blank">Christians in the Visual Arts</a>-->.  
+        target="_blank">Christians in the Visual Arts</a>-->. (<a href="" 
+		target="_blank">CIVA</a> ceased operations in June of 2023.)  
 		Kim went from Dordt University to the South Dakota School 
 		of Mines and Technology in Rapid City, South Dakota.  There
 		she earned a master's degree in environmental engineering.  
@@ -733,7 +734,7 @@
 		& Natural Resources in their <a 
 		href="https://danr.sd.gov/OfficeOfWater/WaterRights/default.aspx" 
 		target="_blank">Water Rights Division</a>.  She 
-		lives in Pierre, South Dakota.  There is one grandchild on 
+		lives in Pierre, South Dakota.  There are two grandchildren on 
 		Doug's side of the family.  
 		
 		<p>At the end of August 2021, I officially retired from the 
@@ -974,7 +975,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 11/21/2023)</small></DIV>
+         <small>(This page last updated on 8/22/2024</small></DIV>
     </TD>
 </TR>
 
