--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -866,8 +866,7 @@ rejects sounds from the sides (from 90&deg; off axis) but accepts sounds equally
 well from the front or back.  This is a <i>bi-directional</i> microphone, 
 also known as a <i>figure-of-eight</i> microphone.  Finally, microphones that are 
 designed to be more sensitive to on-axis sounds than sounds from the sides and 
-the rear are the <i>shotgun</i> or 
-parabolic microphones.  <br><br>
+the rear are the <i>shotgun</i> or <i>parabolic</i> microphones.  <br><br>
 
 Shotgun and parabolic microphones tend to be the largest 
 and lowest-fidelity microphones.  Every compromise possible has been made to 
