Fixed a broken link 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -725,7 +725,8 @@
         target="_blank">Christians in the Visual Arts</a>
         <!--<a href=
         "http://civa-artists.ning.com/profile/NaomiFriend"
-        target="_blank">Christians in the Visual Arts</a>-->. (<a href="" 
+        target="_blank">Christians in the Visual Arts</a>-->. (<a 
+		href="https://en.wikipedia.org/wiki/Christians_in_the_Visual_Arts" 
 		target="_blank">CIVA</a> ceased operations in June of 2023.)  
 		Kim went from Dordt University to the South Dakota School 
 		of Mines and Technology in Rapid City, South Dakota.  There
