Added link for Doon Elevator to CV page, gammar improvments and new links near Fletcher-Munson 	modified:   CV.HTM 	modified:   HOW_S/loudness.html

--- a/CV.HTM
+++ b/CV.HTM
@@ -699,7 +699,8 @@
 		College and transferred to Bellview University to get a 
 		degree in Criminal Justice.  Glenn went directly from 
 		high school to work.  Both Keith and Glenn now work at the 
-		Doon Elevator in Doon Iowa.  All four of them have found
+		<a href="https://www.doonelevator.com/" target="_blank">Doon 
+		Elevator Company</a> in Doon Iowa.  All four of them have found
 		spouses and are married.  There are 12 grandchildren on 
 		Marge's side of our family.  
 		
@@ -742,8 +743,8 @@
 		faculty at Dordt University.  They made a 
 		<a href="https://www.youtube.com/watch?v=lG0CtrVYgS8">tribute video</a> 
 		upon the occasion of my retirement.  One of the retirement activities I'm 
-		participating in is the IEEE's "<a href="https://r4.ieee.org/skpl/">Science 
-		Kits for Public Libraries" project</a>."  I serve as the Grant 
+		participating in is the IEEE's <a href="https://r4.ieee.org/skpl/">"Science 
+		Kits for Public Libraries" project</a>.  I serve as the Grant 
 		Applications Chairperson for this project, a very part-time role.  
 		I also volunteer one day a week at <a 
 		href="https://www.facebook.com/BargainAlleyThriftStore/"
@@ -774,9 +775,9 @@
 		in Christ's service.  (Also, Hewlett Packard Company and 
 		all my past employers have afforded me opportunities to 
 		glorify God.)  I hope my students can say along with me, 
-		that here in the engineering department at Dordt University 
-		we are glorifying Christ, and every day learning to do 
-		that better. </DIV> 
+		that in the engineering department at Dordt University, 
+		and in our entire lives, we are glorifying Christ, and 
+		every day learning to do that better. </DIV> 
     </TD>
 </TR>
 </TABLE>
