--- a/HOW_S/loudness.html
+++ b/HOW_S/loudness.html
@@ -123,8 +123,7 @@ maximum achievable loudness is defined as 0 LUFS.  Everything of the programming
 reproduced at a softer volume than that maximum results in a negative number of LUFS.  
 In programming for streaming media (YouTube, Facebook, etc.) and TV and radio the 
 average LUFS within the entire mix is designed by the mixing engineer to typically 
-be somewhere between &ndash;6 and &ndash;30 LUFS.  Most platforms work best with 
-the average LUFS near &ndash;12 LUFS. <br><br>
+be somewhere between &ndash;6 and &ndash;30 LUFS.  Most media platforms (e.g. YouTube, Facebook, etc.) work best with the average LUFS near &ndash;12 LUFS.  Many digital mixing consoles are designed to work best with an average of around -20 LUFS. <br><br>
 
 The lower the average LUFS is the more contrast the louder sounds of the programming 
 may have against the average.  But an interesting thing about LUFS is that if you 
@@ -188,7 +187,7 @@ that it will be perceived as louder than the shouted voice when in fact it is pe
 
 The units discussed in this section (LUFS and dB-VU) are popular, but they are not true 
 measurements of the absolute loudness of a <i>sound</i>.  They are characteristics of a signal 
-that only relate indirectly to the loudness of the related sounds.  The units discussed 
+that only relate indirectly to the absolute loudness of the related sounds.  The units discussed 
 next are less often used, but they have much more to do with perceived absolute loudness of 
 sounds. <br></p><br><p>
 
@@ -286,7 +285,8 @@ levels.  Europeans have it better because their regulations are in terms of LUFS
 In the 1930's engineers at Bell Labs experimented to try to discover a 
 relationship between sound pressure level (in dB-SPL) and the resulting loudness.  They
 discovered that the frequency of the sound used for the test changed the results.  They 
-proposed a set of "curves" now called the Fletcher-Munson curves.  These curves are the 
+proposed a set of "<a href="https://en.wikipedia.org/wiki/Equal-loudness_contour">equal 
+loundness countours</a>" now called the <i>Fletcher-Munson Curves</i>. These curves are the 
 best information on this topic that are in the public domain.  (Some companies have 
 done their own research and use different curves when designing their 
 products.)  The Fletcher-Munson curves (red lines) are shown below.  One of the characteristics 
@@ -372,9 +372,9 @@ service are at about 80 phons of loudness.  Now you go home and listen to a reco
 version of the very same worship service but you set the volume control to provide about 
 60 phons of loudness.  This is a very common scenario.  Usually when we listen to 
 programming at home we listen at a lower loudness level than that of the venue at the 
-live event.  The greater curvature of the 60 phon curve compared to the 80 phon curve 
-tells us that the lower-loudness playback of the sound is not going to sound as good 
-as the original sound, unless some steps are taken <i>at the playback equipment</i> to 
+live event.  The greater curvature of the 60 phon Fletcher Munson Curve compared to the 80 
+phon curve tells us that the lower-loudness playback of the sound is not going to sound as 
+good as the original sound, unless some steps are taken <i>at the playback equipment</i> to 
 compensate for the lower loudness.<br><br>
 
 For example it takes about 80 dB-SPL at a mid-range frequency such as 440 Hz 
