--- a/CV.HTM
+++ b/CV.HTM
@@ -815,8 +815,8 @@
         --><I>Proceedings of the 2019 Christian Engineering Conference</I></a>, 
         Sioux Center, Iowa, June 2019, pp 119 &ndash; 139.  (Slides to accompany this paper are <a href=
 		"https://drive.google.com/file/d/1kHoq871jOAPdcINA5bd0wGqRELsMWK43/view"
-		><!--"http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Presentations.zip?attredirects=0&d=1"
-		-->available</a>.  See "Session 5 - DeBoer. . .")</P>
+		> <!--"http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Presentations.zip?attredirects=0&d=1"
+		-->available</a>.  See "Session 5 - DeBoer. . ."  A mirror from which the paper may be obtained is <a href="https://dfdeboer.github.io/CVfiles/dDB_GodsGraceInWeightsAndMeasures_CEC_2019_Proceedings-125-145.pdf">here</a>.)</P>
 
         <P>Riley, Elizabeth; "The Loop: Engineering Project Keeps On Giving" 
         <a href=
